--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "vatrikovsky/core",
+	"name": "Vatrikovsky/Core",
 	"description": "Just My Usual Lib",
 	"type": "package", 
 	"version": "1.0.0",
