--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
 	"autoload": {
         "psr-0" : {
-            "Vatrikovsky\\Core" : "src"
+            "Vatrikovsky" : "src/"
         }
     },
 	"minimum-stability": "dev" 
